# irtac

./: .gitignore  README.md  labjack.mojo  pyproject.toml  simulator.py
examples/: data.csv  labjack.mojo
irtac/: modbus_server.py  reader.mojo  service.🔥  watchdog.mojo
irtac/apps/modbus_server/: main.py  setup.json
irtac/models/: engine_state.mojo
