[tool.poetry]
name = "irtac"
version = "0.1.0"
description = ""
authors = ["xentropy <claponsie@gmail.com>"]
readme = "README.md"
packages = [{ include = "irtac" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pymodbustcp = "^0.2.2"
pymodbus = "^3.7.0"
aiohttp = "^3.10.1"
colorlog = "^6.8.2"

[tool.poetry.scripts]
modbus = "irtac.modbus_server:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
